<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="22"
    tools:context="com.example.tsundere.teamhackage.AddMemberActivity">

    <TextView
        android:id="@+id/editMemberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:text="@string/editMemberTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/firstNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:ems="12"
        android:hint="@string/firstNameString"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="85dp" />

    <EditText
        android:id="@+id/lastNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:ems="12"
        android:hint="@string/lastNameString"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="146dp" />

    <EditText
        android:id="@+id/fatherNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:ems="12"
        android:hint="@string/patronymicString"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/groupEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:ems="12"
        android:hint="@string/groupString"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="260dp" />

    <EditText
        android:id="@+id/aboutEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:ems="12"
        android:hint="@string/aboutInfoString"
        android:inputType="textMultiLine" />


    <Button
        android:id="@+id/imageUploadButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:onClick="uploadImageOnClick"
        android:text="@string/AddPhotoString"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveEditButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveEditOnClick"
            android:text="@string/applyEdit"
            android:textColor="@android:color/holo_green_light"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/rejectEditButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="rejectEditOnClick"
            android:text="@string/Cancel"
            android:textColor="#ff0000"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/deleteMember"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="deleteMemberOnClick"
            android:text="@string/deleteMemberString"
            android:textColor="#ff0000"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>
</ScrollView>