<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    android:weightSum="22"
    tools:context="com.example.tsundere.teamhackage.AddMemberActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddMemberTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:ems="12"
        android:hint="Имя"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="85dp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:ems="12"
        android:hint="Фамилия"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="146dp" />

    <EditText
        android:id="@+id/fatherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:ems="12"
        android:hint="Отчество"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/groupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="2"
        android:ems="12"
        android:hint="Группа"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="260dp" />

    <EditText
        android:id="@+id/aboutTitle"
        android:inputType="textMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:ems="12"
        android:hint="О себе" />

    <Button
        android:id="@+id/imageUploadButton"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:onClick="getImageOnClick"
        android:text="Загрузить фотографию" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addApplyOnClick"
            android:text="@string/ApplyNewMember"
            android:textColor="@android:color/holo_green_light"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="addCancelOnClick"
            android:text="@string/Cancel"
            android:textColor="#ff0000"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
</ScrollView>
